--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_spinkit: ^5.0.0
   focused_menu: ^1.0.5
+  ntp: ^2.0.0
 
 dev_dependencies:
   flutter_test:
