--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_spinkit: ^5.0.0
   focused_menu: ^1.0.5
   ntp: ^2.0.0
+  image_picker: ^0.8.4
 
 dev_dependencies:
   flutter_test:
