--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.intro2SE.simple_rpg">
    <application
-        android:label="simple_rpg"
+        android:label="Simple RPG"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
